--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.4.3"
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-security": "^1.4.0",
+    "lerna": "^3.4.3",
+    "prettier": "^1.15.3"
   },
-  "scripts": {
-   
-  },
+  "scripts": {},
   "workspaces": {
     "packages": [
       "packages/*"
