--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@tdi-exchange/server",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "deploy_db": "cd prisma && prisma deploy --env-file ../.env"
   },
   "keywords": [],
   "author": "ahrbil",
@@ -13,14 +15,24 @@
     "@graphql-modules/epoxy": "^0.2.10",
     "@graphql-modules/sonar": "^0.2.10",
     "apollo-server-express": "^2.2.3",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "graphql-import": "^0.7.1",
+    "jsonwebtoken": "^8.4.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "prisma-client-lib": "^1.21.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "nodemon": "^1.18.6"
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/node": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "nodemon": "^1.18.7"
   }
 }
