--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "apollo-boost": "^0.1.22",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-client": "^2.4.7",
+    "apollo-link-http": "^1.5.7",
     "draft-js": "^0.10.5",
     "draft-js-block-breakout-plugin": "^2.0.1",
     "draft-js-code-editor-plugin": "^0.2.1",
@@ -16,11 +19,12 @@
     "draft-js-richbuttons-plugin": "^2.2.0",
     "graphql": "^14.0.2",
     "prismjs": "^1.15.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.1.1",
+    "styled-components": "^4.1.2",
     "styled-icons": "^5.1.0"
   },
   "scripts": {
