--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,7 @@
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
     "apollo-link-http": "^1.5.7",
+    "dayjs": "^1.7.8",
     "draft-js": "^0.10.5",
     "draft-js-block-breakout-plugin": "^2.0.1",
     "draft-js-code-editor-plugin": "^0.2.1",
