--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,6 +25,7 @@
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "redraft": "^0.10.2",
     "styled-components": "^4.1.2",
     "styled-icons": "^5.1.0"
   },
