--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "antd": "^3.11.6",
     "apollo-boost": "^0.1.22",
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
