--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "antd": "^3.11.6",
+    "antd": "^3.12.4",
     "apollo-boost": "^0.1.22",
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
@@ -23,12 +23,13 @@
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-adopt": "^0.6.0",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "redraft": "^0.10.2",
+    "react-scripts": "^2.1.1",
+    "react-tag-autocomplete": "^5.8.0",
     "styled-components": "^4.1.2",
-    "styled-icons": "^5.8.0"
+    "styled-icons": "^6.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
