refactoring application schema to support upload scalar

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,8 +12,8 @@
   "author": "ahrbil",
   "license": "ISC",
   "dependencies": {
-    "@graphql-modules/epoxy": "^0.2.10",
-    "@graphql-modules/sonar": "^0.2.10",
+    "@graphql-modules/epoxy": "^0.3.0",
+    "@graphql-modules/sonar": "^0.3.0",
     "apollo-server-express": "^2.2.3",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
@@ -22,7 +22,9 @@
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-import": "^0.7.1",
+    "graphql-tools": "^4.0.4",
     "jsonwebtoken": "^8.4.0",
+    "merge-graphql-schemas": "^1.5.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
