--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@graphql-modules/epoxy": "^0.3.0",
     "@graphql-modules/sonar": "^0.3.0",
-    "apollo-server-express": "^2.2.3",
+    "apollo-server-express": "^2.3.3",
+    "cloudinary": "^1.13.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
