--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "antd": "^3.12.4",
-    "apollo-boost": "^0.1.22",
-    "apollo-cache-inmemory": "^1.3.11",
-    "apollo-client": "^2.4.7",
-    "apollo-link-http": "^1.5.7",
+    "apollo-boost": "^0.1.27",
+    "apollo-cache-inmemory": "^1.4.2",
+    "apollo-client": "^2.4.12",
+    "apollo-link-http": "^1.5.9",
+    "apollo-upload-client": "^10.0.0",
     "dayjs": "^1.7.8",
     "draft-js": "^0.10.5",
     "draft-js-block-breakout-plugin": "^2.0.1",
@@ -19,6 +20,7 @@
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-prism-plugin": "^0.1.3",
     "draft-js-richbuttons-plugin": "^2.2.0",
+    "formik": "^1.4.3",
     "graphql": "^14.0.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
