--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,7 +31,8 @@
     "react-scripts": "^2.1.1",
     "react-tag-autocomplete": "^5.8.0",
     "styled-components": "^4.1.2",
-    "styled-icons": "^6.5.1"
+    "styled-icons": "^6.5.1",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
