--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,7 +30,8 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
-    "prisma-client-lib": "1.21.1"
+    "prisma-client-lib": "1.21.1",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
