--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.12.4",
     "apollo-boost": "^0.1.27",
     "apollo-cache-inmemory": "^1.4.2",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.12",
     "apollo-link-http": "^1.5.9",
     "apollo-upload-client": "^10.0.0",
