--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,12 +25,13 @@
     "graphql": "^14.0.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "^16.8.1",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.3.2",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.1",
     "react-epic-spinners": "^0.2.1",
-    "react-scripts": "^2.1.1",
+    "react-error-boundary": "^1.2.3",
+    "react-scripts": "^2.1.3",
     "react-tag-autocomplete": "^5.8.0",
     "styled-components": "^4.1.2",
     "styled-icons": "^6.5.1",
