passing node env to babel

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd dist && node index.js",
-    "build": "babel src --out-dir dist --copy-files",
+    "start": "NODE_ENV=production node dist/index.js",
+    "build": "NODE_ENV=production babel src --out-dir dist --copy-files",
     "now-build": "yarn run build",
     "dev": "nodemon --exec babel-node src/index.js",
     "deploy_db": "cd prisma && prisma deploy --env-file ../.env"
