Update prisma generated output path

--- a/packages/server/prisma/prisma.yml
+++ b/packages/server/prisma/prisma.yml
@@ -6,9 +6,9 @@ secret: ${env:PRISMA_SECRET}
 
 generate:
   - generator: javascript-client
-    output: ../generated/prisma-client/
+    output: ../src/generated/prisma-client/
   - generator: graphql-schema
-    output: ../generated/
+    output: ../src/generated/
 
 hooks:
   post-deploy:
