--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "draft-js-richbuttons-plugin": "^2.2.0",
     "formik": "^1.4.3",
     "graphql": "^14.0.2",
+    "nprogress": "^0.2.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
