--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.1",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.3.2",
+    "react-content-loader": "^4.0.1",
     "react-dom": "^16.8.1",
     "react-epic-spinners": "^0.2.1",
     "react-error-boundary": "^1.2.3",
