--- a/packages/web/public/manifest.json
+++ b/packages/web/public/manifest.json
@@ -1,14 +1,24 @@
 {
   "name": "TDi-Exchange",
-  "short_name": "TDi-Exchange",
+  "short_name": "TDi",
   "icons": [
     {
-      "src": "/assets/android-chrome-192x192.png",
+      "src": "/assets/homescreen-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/homescreen-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/homescreen-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/android-chrome-512x512.png",
+      "src": "/assets/homescreen-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
