--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "antd": "^3.12.4",
+    "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.4.2",
     "apollo-client": "^2.4.12",
     "apollo-link-http": "^1.5.9",
@@ -25,14 +26,14 @@
     "nprogress": "^0.2.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.1",
+    "react": "^16.8.4",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.3.2",
     "react-content-loader": "^4.0.1",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.4",
     "react-epic-spinners": "^0.2.1",
     "react-error-boundary": "^1.2.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "react-tag-autocomplete": "^5.8.0",
     "styled-components": "^4.1.2",
     "styled-icons": "^6.5.1",
