--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "version": 2,
   "name": "tdi-exchange",
   "alias": ["tdi-exchange"],
-  "regions": ["gru"],
+  "regions": ["bru"],
   "builds": [
     {
       "src": "packages/server/dist/index.js",
