--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node dist/index.js",
-    "build": "rm -rf dist/ && NODE_ENV=production babel src --out-dir dist --copy-files",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "build": "rm -rf dist/ && cross-env NODE_ENV=production babel src --out-dir dist --copy-files",
     "now-build": "yarn run build",
     "dev": "nodemon --exec babel-node src/index.js",
     "deploy_db": "cd prisma && prisma deploy --env-file ../.env"
@@ -43,6 +43,7 @@
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-plugin-inline-dotenv": "^1.2.1",
+    "cross-env": "^5.2.0",
     "nodemon": "^1.18.7",
     "now-env": "^3.1.0"
   }
