turn of no-nested-ternary eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "no-unused-vars": "warn",
     "react/jsx-filename-extension": 0,
     "jsx-a11y/accessible-emoji": "warn",
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "no-nested-ternary": "off"
   }
 }
