--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf dist/ && cross-env NODE_ENV=production babel src --out-dir dist --copy-files",
     "now-build": "yarn run build",
     "dev": "nodemon --exec babel-node src/index.js",
-    "deploy_db": "cd prisma && prisma deploy --env-file ../.env"
+    "deploy:db": "cd prisma && prisma deploy --env-file ../.env"
   },
   "keywords": [],
   "author": "ahrbil",
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "graphql": "^14.0.2",
+    "graphql": "14.0.0",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.4",
     "jsonwebtoken": "^8.4.0",
@@ -30,7 +30,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
-    "prisma-client-lib": "1.28.5",
+    "prisma-client-lib": "^1.30.1",
     "yup": "^0.26.10"
   },
   "devDependencies": {
@@ -42,6 +42,7 @@
     "cross-env": "^5.2.0",
     "nodemon": "^1.18.7",
     "now-env": "^3.1.0",
+    "prisma": "1.29.2",
     "rimraf": "^2.6.3"
   }
 }
