Fix prisma to generate SDL file after deploy

--- a/packages/server/prisma/prisma.yml
+++ b/packages/server/prisma/prisma.yml
@@ -8,7 +8,7 @@ generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client/
   - generator: graphql-schema
-    output: ../src/generated/
+    output: ../src/generated/schema.graphql
 
 hooks:
   post-deploy:
