generate a prisma client depanding on the dev stage

--- a/packages/server/prisma/prod/prisma.yml
+++ b/packages/server/prisma/prod/prisma.yml
@@ -6,9 +6,9 @@ secret: ${env:PRISMA_SECRET}
 
 generate:
   - generator: javascript-client
-    output: ../src/generated/prisma-client/
+    output: ../../src/generated/prisma-client/
   - generator: graphql-schema
-    output: ../src/generated/schema.graphql
+    output: ../../src/generated/prisma.graphql
 
 hooks:
   post-deploy:
