Update to the new prisma datamodel

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -43,7 +43,7 @@
     "cross-env": "^5.2.0",
     "nodemon": "^1.18.7",
     "now-env": "^3.1.0",
-    "prisma": "1.29.2",
+    "prisma": "^1.31.1",
     "rimraf": "^2.6.3"
   }
 }
