--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,8 +8,11 @@
     "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.4.2",
     "apollo-client": "^2.4.12",
+    "apollo-link": "^1.2.11",
     "apollo-link-http": "^1.5.9",
+    "apollo-link-ws": "^1.0.17",
     "apollo-upload-client": "^10.0.0",
+    "apollo-utilities": "^1.2.1",
     "dayjs": "^1.7.8",
     "draft-js": "^0.10.5",
     "draft-js-block-breakout-plugin": "^2.0.1",
@@ -38,6 +41,7 @@
     "react-tag-autocomplete": "^5.8.0",
     "styled-components": "^4.1.2",
     "styled-icons": "^6.5.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "yup": "^0.26.10"
   },
   "scripts": {
