--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "lerna run start --parallel",
+    "build:web": "lerna run --scope web buld"
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff"
   },
