--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "lerna run start --parallel",
-    "build:web": "cd ./packages/web yarn run build",
+    "build:web": "cd ./packages/web && yarn run build",
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff"
   },
