--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,5 +1,5 @@
 FROM prismagraphql/prisma:1.34
 
-COPY ./prerun_hook.sh /app/prerun_hook.sh
+COPY ./packages/server/prerun_hook.sh /app/prerun_hook.sh
 
 CMD /app/start.sh
