--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "lerna run start --parallel",
     "build:web": "cd ./packages/web && yarn run build",
+    "build:server": "cd ./packages/server && yarn run build",
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff"
   },
