--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -11,7 +11,7 @@ ENV PRISMA_CONFIG_PATH=./packages/server/prisma/prisma.yml
 
 COPY ./packages/server/config.yml ./packages/server/prisma/prisma.yml
 
-RUN sed -i s/DB_HOST/$DB_HOST/g ./packages/server/prisma/prisma.yml
+# RUN sed -i s/DB_HOST/$DB_HOST/g ./packages/server/prisma/prisma.yml
 RUN sed -i s/DB_PASSWORD/$AUTH_DB_PASSWORD/g ./packages/server/prisma/prisma.yml
 RUN sed -i s/DB_USER/$DB_USER/g ./packages/server/prisma/prisma.yml
 RUN sed -i s/PRISMA_SECRET/$PRISMA_SECRET/g ./packages/server/prisma/prisma.yml
