Update docker file

--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -7,14 +7,9 @@ ARG DB_PASSWORD
 ARG PRISMA_SECRET
 
 ARG PRISMA_CONFIG_PATH
-ENV PRISMA_CONFIG_PATH=./packages/server/prisma/prisma.yml
+ENV PRISMA_CONFIG_PATH=./packages/server/config.yml
 
 COPY ./packages/server/config.yml ./packages/server/prisma/prisma.yml
 
-# RUN sed -i s/DB_HOST/$DB_HOST/g ./packages/server/prisma/prisma.yml
-RUN sed -i s/DB_PASSWORD/$AUTH_DB_PASSWORD/g ./packages/server/prisma/prisma.yml
-RUN sed -i s/DB_USER/$DB_USER/g ./packages/server/prisma/prisma.yml
-RUN sed -i s/PRISMA_SECRET/$PRISMA_SECRET/g ./packages/server/prisma/prisma.yml
-RUN sed -i s/DB_NAME/$DB_NAME/g ./packages/server/prisma/prisma.yml
 
 EXPOSE 4466
